--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="details-container">
                     <img src="./assets/experience.png" alt="Experience icon" class="icon">
                     <h3>Experience</h3>
-                    <p>2+ years<br>Frontend Developer</p> 
+                    <p>1+ years<br>Frontend Developer</p> 
                 </div>
                 <div class="details-container">
                     <img src="./assets/education.png" alt="education" class="icon">
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="text-container">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio perferendis odio possimus cupiditate iure amet neque harum sequi nostrum! Voluptas laudantium omnis debitis autem, tempore facere obcaecati sapiente optio sint nostrum eveniet perspiciatis magni est quae reiciendis reprehenderit aspernatur consequatur deserunt expedita nesciunt recusandae pariatur temporibus. Minus expedita ipsum fugiat.
+                <p>An engineering student passionate about frontend development and programming. Skilled in creating responsive and user-friendly websites with a strong foundation in coding. Motivated by problem-solving and continuous learning, always eager to explore new technologies and transform creative ideas into reality. Committed to writing clean, efficient code and delivering engaging digital experiences that leave a positive impact.
 
                     </p>
                 </div>
@@ -238,22 +238,22 @@
                       <div class="details-container color-container">
                         <div class="article-container">
                           <img
-                            src="./assets/project-1.png"
+                            src="./assets/image1.png"
                             alt="Project 1"
                             class="project-img"
                           />
                         </div>
-                        <h2 class="experience-sub-title project-title">Project One</h2>
+                        <h2 class="experience-sub-title project-title">.sneakers</h2>
                         <div class="btn-container">
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
+                            onclick="location.href='https://github.com/priyanshupratikkk/E-Commerce-Website'"
                           >
                             Github
                           </button>
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
+                            onclick="location.href='https://github.com/priyanshupratikkk/E-Commerce-Website'"
                           >
                             Live Demo
                           </button>
@@ -262,22 +262,22 @@
                       <div class="details-container color-container">
                         <div class="article-container">
                           <img
-                            src="./assets/project-2.png"
+                            src="./assets/image.png"
                             alt="Project 2"
                             class="project-img"
                           />
                         </div>
-                        <h2 class="experience-sub-title project-title">Project Two</h2>
+                        <h2 class="experience-sub-title project-title">Portfolio Website</h2>
                         <div class="btn-container">
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
+                            onclick="location.href='https://github.com/PriyanshuPratikkk/Portfolio-Website'"
                           >
                             Github
                           </button>
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
+                            onclick="location.href='https://priyanshupratikkk.github.io/Portfolio-Website/'"
                           >
                             Live Demo
                           </button>
