--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                           </button>
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/priyanshupratikkk/E-Commerce-Website'"
+                            onclick="location.href='https://priyanshupratikkk.github.io/E-Commerce-Website/'"
                           >
                             Live Demo
                           </button>
