--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                 </div>
             </div>
             <div class="text-container">
-                <p>An engineering student passionate about frontend development and programming. Skilled in creating responsive and user-friendly websites with a strong foundation in coding. Motivated by problem-solving and continuous learning, always eager to explore new technologies and transform creative ideas into reality. Committed to writing clean, efficient code and delivering engaging digital experiences that leave a positive impact.
-
+                <p>An engineering student passionate about frontend development and programming. Skilled in creating responsive and user-friendly websites with a strong foundation in coding. Motivated by problem-solving and continuous learning, always eager to explore new technologies and transform creative ideas into reality. 
                     </p>
                 </div>
             </div>
